--- a/src/content/items/Robe/antania.yml
+++ b/src/content/items/Robe/antania.yml
@@ -1,10 +1,11 @@
 - name: Deer Robe
   stats:
     energyResist: 30
-    fireResist: 10
-    iceResist: 10
-    necroticResist: 10
+    fireResist: 50
+    iceResist: 50
+    necroticResist: 15
     poisonResist: 10
+    diseaseResist: 5
     defense: 1
   desc: "a gold robe made from the hide of a deer"
   value: 100
@@ -16,8 +17,9 @@
     energyResist: 45
     fireResist: 15
     iceResist: 15
-    necroticResist: 15
+    necroticResist: 30
     poisonResist: 20
+    diseaseResist: 10
     defense: 2
   desc: "a silver robe made from the hide of a weredeer"
   value: 1000
