--- a/src/content/npcs/antania/Yzalt/crazed.yml
+++ b/src/content/npcs/antania/Yzalt/crazed.yml
@@ -11,6 +11,7 @@
     con: 13
     int: 15
     perception: 130
+    damageFactor: 0.7
   skillLevels: 2
 
   level: 8
@@ -99,6 +100,7 @@
   otherStats:
     con: 13
     perception: 130
+    damageFactor: 0.7
   skillLevels: 2
 
   level: 8
@@ -196,6 +198,7 @@
   otherStats:
     con: 15
     perception: 130
+    damageFactor: 0.7
   skillLevels:
     Mace: 2
     Onehanded: 2
@@ -300,6 +303,7 @@
     con: 13
     wis: 15
     perception: 130
+    damageFactor: 0.7
   skillLevels: 2
 
   level: 8
@@ -391,6 +395,7 @@
   otherStats:
     con: 11
     perception: 110
+    damageFactor: 0.7
   skillLevels: 2
 
   level: 7
@@ -492,6 +497,7 @@
     con: 15
     int: 11
     perception: 170
+    damageFactor: 0.7
   skillLevels: 3
 
   level: 8
@@ -638,6 +644,7 @@
     stealth: 25
     con: 15
     perception: 170
+    damageFactor: 0.5
 
   level: 8
 
@@ -803,6 +810,7 @@
   otherStats:
     con: 15
     perception: 170
+    damageFactor: 0.5
   skillLevels:
     Mace: 2
     Onehanded: 2
@@ -940,6 +948,7 @@
     con: 15
     wis: 17
     perception: 170
+    damageFactor: 0.7
   skillLevels: 3
 
   level: 8
