--- a/src/content/npcs/antania/TowerOfSelen/orc.yml
+++ b/src/content/npcs/antania/TowerOfSelen/orc.yml
@@ -4,7 +4,7 @@
   hostility: Always
   sprite: 70
   alignment: Evil
-  baseClass: Mage
+  baseClass: Warrior
   stats: 10
   skillLevels: 3
   level: 14
@@ -14,6 +14,8 @@
   otherStats:
     con: 15
     perception: 225
+    damageFactor: 0.5
+    accuracy: -10
 
   gold:
     min: 550
@@ -75,6 +77,8 @@
   otherStats:
     con: 15
     perception: 225
+    damageFactor: 0.5
+    accuracy: -10
 
   gold:
     min: 550
@@ -153,6 +157,8 @@
   otherStats:
     con: 15
     perception: 225
+    damageFactor: 0.5
+    accuracy: -10
 
   gold:
     min: 550
@@ -220,6 +226,7 @@
   otherStats:
     con: 25
     perception: 250
+    damageFactor: 0.7
 
   gold:
     min: 1550
