--- a/src/content/npcs/antania/DedlaenMaze/nw.yml
+++ b/src/content/npcs/antania/DedlaenMaze/nw.yml
@@ -5,7 +5,7 @@
   hostility: Always
   sprite: 1015
   alignment: Evil
-  stats: 15
+  stats: 10
   skillLevels: 3
   level: 15
 
@@ -13,9 +13,11 @@
 
   otherStats:
     con: 15
-    accuracy: 4
     offense: 4
-    perception: 245
+    defense: 5
+    perception: 75
+    accuracy: 1
+    damageFactor: 0.5
 
   gold:
     min: 2050
@@ -77,7 +79,9 @@
     con: 20
     accuracy: 5
     offense: 5
-    perception: 245
+    perception: 100
+    accuracy: 1
+    damageFactor: 0.5
 
   gold:
     min: 3050
