--- a/src/content/npcs/risan/RisanMines/mines.yml
+++ b/src/content/npcs/risan/RisanMines/mines.yml
@@ -17,6 +17,7 @@
     int: 10
     accuracy: 5
     perception: 220
+    damageFactor: 0.5
 
   allegianceReputation:
     Enemy: -101
@@ -101,6 +102,7 @@
   otherStats:
     accuracy: 5
     perception: 240
+    damageFactor: 0.5
 
   gold:
     min: 3850
@@ -180,6 +182,7 @@
     accuracy: 7
     offense: 7
     move: 2
+    damageFactor: 0.6
 
   skillOnKill: 35
 
