--- a/src/content/recipes/alchemy/statbottles-risan.yml
+++ b/src/content/recipes/alchemy/statbottles-risan.yml
@@ -74,3 +74,48 @@
     - Frostlands Gourd
     - Catacombs Frostflower
     - Catacombs Frostflower
+
+- item: Risan Willpower Potion
+  skillGained: 1000
+  maxSkillForGains: 20
+  requiredSkill: 10
+  xpGained: 15000
+  ingredients:
+    - Silver Scale (Refined)
+    - Silver Scale (Refined)
+    - Risan Intelligence Potion
+    - Risan Intelligence Potion
+    - Risan Wisdom Potion
+    - Risan Wisdom Potion
+    - Risan Constitution Potion
+    - Risan Constitution Potion
+
+- item: Risan Charisma Potion
+  skillGained: 1000
+  maxSkillForGains: 20
+  requiredSkill: 10
+  xpGained: 15000
+  ingredients:
+    - Silver Scale (Refined)
+    - Silver Scale (Refined)
+    - Risan Strength Potion
+    - Risan Strength Potion
+    - Risan Dexterity Potion
+    - Risan Dexterity Potion
+    - Risan Agility Potion
+    - Risan Agility Potion
+
+- item: Risan Luck Potion
+  skillGained: 1000
+  maxSkillForGains: 25
+  requiredSkill: 12
+  xpGained: 15000
+  ingredients:
+    - Risan Strength Potion
+    - Risan Dexterity Potion
+    - Risan Agility Potion
+    - Risan Intelligence Potion
+    - Risan Wisdom Potion
+    - Risan Willpower Potion
+    - Risan Charisma Potion
+    - Risan Constitution Potion
