miner hammers are trash

--- a/src/content/npcs/risan/RisanMines/mines.yml
+++ b/src/content/npcs/risan/RisanMines/mines.yml
@@ -49,7 +49,7 @@
       - result: Miner Offense Mana Helm
         chance: 1
 
-  rightHand: Mines Hammer
+  rightHand: Mines Trash Hammer
 
   usableSkills:
     - Charge
@@ -130,7 +130,7 @@
       - result: Miner Offense Mana Helm
         chance: 1
 
-  rightHand: Mines Hammer
+  rightHand: Mines Trash Hammer
 
   usableSkills:
     - Charge
