--- a/src/content/npcs/risan/FrozenCatacombs/1F.yml
+++ b/src/content/npcs/risan/FrozenCatacombs/1F.yml
@@ -274,6 +274,8 @@
       chance: 100
     - result: TrueSight
       chance: 100
+    - result: FleetOfFoot
+      chance: 100
 
   gold:
     min: 1550
